WIP: before rebase

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🍯 Honeycomb Racing Game</title>
     <meta name="description" content="Blockchain racing game with NFT cars, SPEEDY tokens, and tournaments powered by Honeycomb Protocol" />
+    <script>
+      // Polyfill for Buffer in browser environment
+      window.global = window.globalThis;
+    </script>
   </head>
   <body>
     <div id="root"></div>
